k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbital-sim-deployment
  namespace: orbital
  labels:
    app: orbital-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orbital-sim
  template:
    metadata:
      labels:
        app: orbital-sim
    spec:
      securityContext:  # allows permission to pvc directory
        runAsUser: 1001
        fsGroup: 1001
      nodeSelector:
        side: orbital
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: history-cache
        persistentVolumeClaim:
          claimName: orbital-sim-cache-pvc
      containers:
      - name: orbital-sim
        image: trevormcguire/dev:orbital_sim_v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: history-cache
          mountPath: /data
        readinessProbe:  # determine if ready to accept traffic
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:  # determine if container is alive
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: orbital-sim-service
  namespace: orbital
spec:
  type: ClusterIP
  selector:
    app: orbital-sim
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbital-sim-ingress
  namespace: orbital
  annotations:
    cert-manager.io/issuer: "letsencrypt-prd"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - orbitalphysics.com
    secretName: orbital-sim-ingress-tls  # cert-manager requests the cert and stores it here.
  rules:
  - host: orbitalphysics.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orbital-sim-service
            port:
              number: 80
